--- a/index.html
+++ b/index.html
@@ -21,6 +21,44 @@
 
 <body>
 
+  <!-- SITE - HEADER -->
+
+  <header class="site-header">
+    <div class="site-header-top">
+      <div class="site-header-top-container container">
+
+        <!-- SITE HEADER LOGO -->
+        <a class="site-header-logo" href="index.html">
+          <img class="site-header-logo-img" src="images/logo-purple.svg" alt="N24 logosi" width="264" height="28">
+        </a>
+
+        <!-- CURRENCY RATES -->
+        <ul class="currency-rates">
+          <li class="currency-rates-item">
+            <b class="currency-rates-type">$</b>
+            <span class="currency-rates-value">11450.03</span>
+          </li>
+          <li class="currency-rates-item">
+            <b class="currency-rates-type">P</b>
+            <span class="currency-rates-value">143.41</span>
+          </li>
+        </ul>
+        <!-- GLOBAL SEARCH FORM -->
+
+        <!-- LANG TOGGLE -->
+        <div class="lang-toggle">
+          <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
+          <a class="lang-toggle-link" href="index.html/ru">РУ</a>
+        </div>
+
+        <!-- SITE HEADER AUTH -->
+        <a href="#" class="button button-primary">Войти</a>
+
+      </div>
+
+    </div>
+  </header>
+
 </body>
 
 </html>
