--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <span class="currency-rates-value">143.41</span>
           </li>
         </ul>
+
         <!-- GLOBAL SEARCH FORM -->
+        <form class="global-search-form" action="https://echo.htmlacademy.ru">
+          <input class="global-search-form-input" type="search" placeholder="Поиск" required >
+        </form>
 
         <!-- LANG TOGGLE -->
         <div class="lang-toggle">
@@ -58,6 +62,9 @@
 
     </div>
   </header>
+
+
+
 
 </body>
 
