--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
       </div>
 
     </div>
+    <div class="container">
+      <!-- SITENAV -->
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Главное</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Интересное</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Экономика</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Политика</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Общество</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Технологии</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Спорт</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Культура</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Происшествия</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Наука</a></li>
+        </ul>
+      </nav>
+
+      <!-- SITE HEADER BANNER -->
+      <aside class="site-header-banner">
+        <a class="site-header-banner-link" href="https://olcha.uz" target="_blank">
+          <img class="site-header-banner-img" src="images/shopme-banner.jpg" alt="Shopme banner" srcset="images/shopme-banner.jpg 1x, images/shopme-banner@2x.jpg 2x" width="1200" height="128">
+        </a>
+      </aside>
+    </div>
   </header>
 
 
