Add notification cta

--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
         </div>
       </section>
 
+      <!-- NOTIFICATION CTA -->
+      <section class="notification-cta">
+        <div class="notification-cta-text">Хотите быть в курсе свежих новостей? <br>Включите уведомления!
+        </div>
+        <a href="#" class="button button-orange">Включит</a>
+      </section>
+
+
     </div>
 
   </main>
