--- a/index.html
+++ b/index.html
@@ -411,12 +411,14 @@
               </li>
             </ul>
           </section>
-          <section class="layout-2-1-sidebar-item sidebar-ad">
+
+          <aside class="layout-2-1-sidebar-item sidebar-ad">
             <a class="sidebar-ad-link" href="#" target="_blank">
               <img class="sidebar-ad-img" src="images/sidebar-link-img.jpg" alt="Olmos residence"
                 srcset="images/sidebar-link-img.jpg 1x, images/sidebar-link-img@2x.jpg 2x">
             </a>
-          </section>
+          </aside>
+
         </div>
       </div>
     </div>
