modified according to w3c validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -95,8 +95,7 @@
       <!-- <h1>Namanganliklar24 - сайт новостей</h1> -->
 
       <!-- TOP NEWS -->
-      <section class="top-news">
-        <!-- <h2>Топ новости</h2> -->
+      <div class="top-news">
 
         <!-- NEWS GRID -->
         <div class="news-grid">
@@ -237,14 +236,14 @@
           </article>
 
         </div>
-      </section>
+      </div>
 
       <!-- NOTIFICATION CTA -->
-      <section class="notification-cta">
+      <div class="notification-cta">
         <div class="notification-cta-text">Хотите быть в курсе свежих новостей? <br>Включите уведомления!
         </div>
         <a href="#" class="button button-orange">Включит</a>
-      </section>
+      </div>
 
       <!-- GLOBAL NEWS -->
       <div class="layout-2-1">
