--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
       <!-- SITENAV -->
       <nav class="sitenav">
         <ul class="sitenav-list">
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Главное</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Интересное</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Экономика</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Политика</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Общество</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Технологии</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Спорт</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Культура</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Происшествия</a></li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Наука</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="index.html">Главное</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Интересное</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Экономика</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Политика</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Общество</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Технологии</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Спорт</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Культура</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Происшествия</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="news-list.html">Наука</a></li>
         </ul>
       </nav>
 
@@ -411,7 +411,7 @@
             </ul>
           </section>
 
-          <aside class="layout-2-1-sidebar-item sidebar-ad">
+          <aside class="layout-2-1-sidebar-item sidebar-commercial">
             <a class="sidebar-ad-link" href="#" target="_blank">
               <img class="sidebar-ad-img" src="images/sidebar-link-img.jpg" alt="Olmos residence"
                 srcset="images/sidebar-link-img.jpg 1x, images/sidebar-link-img@2x.jpg 2x">
