--- a/news-list.html
+++ b/news-list.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>N-24-following</title>
+  <title>N-24-Yangiliklar</title>
 
   <!-- Fonts -->
 
@@ -397,7 +397,7 @@
               <a class="site-footer-link" href="#">Информация о сайте</a>
             </li>
             <li class="site-footer-links-item">
-            <a class="site-footer-link" href="#">Напишите нам</a>
+            <a class="site-footer-link" href="contact.html">Напишите нам</a>
             </li>
             <li class="site-footer-links-item">
               <a class="site-footer-link" href="#">Реклама</a>
