--- a/news-list.html
+++ b/news-list.html
@@ -15,8 +15,9 @@
 
   <!-- Styles -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="css/styles-minified.css">
 </head>
 
 <body>
