--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <!-- Styles -->
 
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="css/styles-minified.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles-minified.css"> -->
 </head>
 
 <body>
@@ -243,7 +243,7 @@
       <div class="notification-cta">
         <div class="notification-cta-text">Хотите быть в курсе свежих новостей? <br>Включите уведомления!
         </div>
-        <a href="#" class="button button-orange">Включит</a>
+        <button type="button" id="notification-on" class="button button-orange">Включит</button>
       </div>
 
       <!-- GLOBAL NEWS -->
@@ -497,8 +497,25 @@
     </div>
   </footer>
 
+  <!-- MODALS -->
+  <section class="modal" id="modal-notification">
+    <div class="modal-dialogue">
+      <div class="modal-content">
+        <h2 class="visually-hidden">Уведомления</h2>
+        <button class="modal-close" type="button" aria-label="Закрыт модальное окно">
+          <img class="modal-close-icon" src="images/close.svg" alt="" width="24" height="24">
+        </button>
+        <p class="modal-content-text">
+          Хотите быть в курсе свежих новостей? <br> Включите уведомления!
+        </p>
+        <div class="modal-actions">
+          <button class="button-large button button-orange" type="button" href="#">Включит</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
