Add settimeout to modal and update modal settings

--- a/news-list.html
+++ b/news-list.html
@@ -15,9 +15,9 @@
 
   <!-- Styles -->
 
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="css/styles-minified.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles-minified.css"> -->
 </head>
 
 <body>
@@ -450,8 +450,25 @@
     </div>
   </footer>
 
+<!-- MODALS -->
+<section class="modal" id="modal-notification">
+  <div class="modal-dialogue">
+    <div class="modal-content">
+      <h2 class="visually-hidden">Уведомления</h2>
+      <button class="modal-close js-modal-close" type="button" aria-label="Закрыт модальное окно">
+        <img class="modal-close-icon" src="images/close.svg" alt="" width="24" height="24">
+      </button>
+      <p class="modal-content-text">
+        Хотите быть в курсе свежих новостей? <br> Включите уведомления!
+      </p>
+      <div class="modal-actions">
+        <button class="button-large button button-orange" type="button" href="#">Включит</button>
+      </div>
+    </div>
+  </div>
+</section>
 
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
