--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     <div class="modal-dialogue">
       <div class="modal-content">
         <h2 class="visually-hidden">Уведомления</h2>
-        <button class="modal-close" type="button" aria-label="Закрыт модальное окно">
+        <button class="modal-close js-modal-close" type="button" aria-label="Закрыт модальное окно">
           <img class="modal-close-icon" src="images/close.svg" alt="" width="24" height="24">
         </button>
         <p class="modal-content-text">
